--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
   <div id="trialControls"></div>
 
   <script>
+
+    const INTRO_IMG = "melody_cat.png";          // picture of Melody the cat
+    const INTRO_NARRATION = "intro_narration.mp3"; // narration audio file
+    
   const TRIALS_PER_BLOCK = 2;
   const BLOCK_ORDER = ["tempo", "pitch"];
   const BLOCK_FILES = {
