--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   <script>
 
-    const INTRO_IMG = "melody_cat.png";          // picture of Melody the cat
+    const INTRO_IMG = "Melody.png";          // picture of Melody the cat
     const INTRO_NARRATION = "intro_narration.mp3"; // narration audio file
     
   const TRIALS_PER_BLOCK = 2;
