--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@ function showIntroScreen() {
       </div>
       <div style="flex: 1; padding: 30px;">
         <p style="font-size: 1.5em; line-height: 1.6;">
-          Hi there! My name is Melody, and I love music!<br><br>
-          Every day, I ride a magical elevator that sometimes makes music sound... a little different.<br><br>
-          Let’s explore how the music changes – and you can help me figure it out!
+          Hi there! <br>
+          My name is Melody, and I love music! <br>
+Every day, I ride an elevator to get to music class. <br>
+But today, something strange is happening... 
         </p>
         <button id="continueIntro" style="margin-top: 30px; padding: 14px 28px; font-size: 1em; border-radius: 10px; background-color: #4b2e83; color: white; border: none;">Continue</button>
       </div>
