--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@ function showIntroScreen() {
   document.body.innerHTML = `
     <div style="display: flex; align-items: center; justify-content: center; height: 100vh; padding: 40px; box-sizing: border-box;">
       <div style="flex: 1; display: flex; justify-content: center;">
-        <img src="melody.png" alt="Melody character" style="max-height: 80vh; max-width: 90%; border-radius: 20px;">
+        <img src="M
+        
+        Melody.png" alt="Melody character" style="max-height: 80vh; max-width: 90%; border-radius: 20px;">
       </div>
       <div style="flex: 1; padding: 30px;">
         <p style="font-size: 1.5em; line-height: 1.6;">
