--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ function showIntroScreen() {
       <div style="flex: 1; display: flex; justify-content: center;">
         <img src="M
         
-        Melody.png" alt="Melody character" style="max-height: 80vh; max-width: 90%; border-radius: 20px;">
+        "Melody.png" alt="Melody character" style="max-height: 80vh; max-width: 90%; border-radius: 20px;">
       </div>
       <div style="flex: 1; padding: 30px;">
         <p style="font-size: 1.5em; line-height: 1.6;">
