--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-You said:
 <!DOCTYPE html>
 <html>
 <head>
@@ -128,13 +127,13 @@ window.onload = async () => {
     participantID = prompt("Enter your Participant ID:");
     if (participantID) participantID = participantID.trim();
   }
-  sessionID = ${participantID}_${new Date().toISOString()};
+  sessionID = `${participantID}_${new Date().toISOString()}`;
 
   showIntroScreen();
 };
 
 function showIntroScreen() {
-  document.body.innerHTML = 
+  document.body.innerHTML = `
     <div style="display: flex; align-items: center; justify-content: center; height: 100vh; padding: 40px; box-sizing: border-box;">
       <div style="flex: 1; display: flex; justify-content: center;">
         <img src="Melody.png" alt="Melody character" style="max-height: 80vh; max-width: 90%; border-radius: 20px;">
@@ -150,7 +149,7 @@ But today, something strange is happening...
       </div>
     </div>
     <audio id="introAudio" src="intro_narration.mp3" autoplay></audio>
-  ;
+  `;
 
   const introAudio = document.getElementById("introAudio");
   const continueBtn = document.getElementById("continueIntro");
@@ -162,10 +161,10 @@ But today, something strange is happening...
 
   continueBtn.addEventListener("click", async () => {
     // Restore base HTML layout and start practice
-    document.body.innerHTML = 
+    document.body.innerHTML = `
       <div id="visual-container"></div>
       <audio id="myAudio" hidden preload="auto"></audio>
-      <div id="trialControls"></div>;
+      <div id="trialControls"></div>`;
     setupVisualElements();
 
     // Load block files now
@@ -177,31 +176,13 @@ But today, something strange is happening...
         shuffleArray(rows);
         blocks[block] = rows.slice(0, TRIALS_PER_BLOCK);
       } catch (err) {
-        alert(Failed to load ${block} block:  + err.message);
+        alert(`Failed to load ${block} block: ` + err.message);
         return;
       }
     }
 
     runPracticeTrials(BLOCK_ORDER[currentBlockIndex]);
   });
-}
-
-  // Load trial files and begin
-  (async () => {
-    for (const block of BLOCK_ORDER) {
-      try {
-        const response = await fetch(BLOCK_FILES[block]);
-        const text = await response.text();
-        const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
-        shuffleArray(rows);
-        blocks[block] = rows.slice(0, TRIALS_PER_BLOCK);
-      } catch (err) {
-        alert(Failed to load ${block} block:  + err.message);
-        return;
-      }
-    }
-    runPracticeTrials(BLOCK_ORDER[currentBlockIndex]);
-  })();
 }
 
   function setupVisualElements() {
@@ -225,7 +206,7 @@ But today, something strange is happening...
   function updatePlayButton() {
     const block = BLOCK_ORDER[currentBlockIndex];
     const trialControls = document.getElementById("trialControls");
-    trialControls.innerHTML = <button id="playButton">Start ${block.toUpperCase()} Trial ${trialCounter} of ${TRIALS_PER_BLOCK}</button>;
+    trialControls.innerHTML = `<button id="playButton">Start ${block.toUpperCase()} Trial ${trialCounter} of ${TRIALS_PER_BLOCK}</button>`;
     document.getElementById("playButton").addEventListener("click", playTrial);
   }
 
@@ -313,7 +294,7 @@ But today, something strange is happening...
   }
 
   function showResponseOptions() {
-    document.body.innerHTML = 
+    document.body.innerHTML = `
       <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; padding: 20px;">
         <h1 style="color: #4b2e83;">Which elevator did Melody ride?</h1>
         <p style="max-width: 600px; font-size: 1.1em; margin-bottom: 30px;">
@@ -331,7 +312,7 @@ But today, something strange is happening...
             <div style="margin-top: 12px; font-weight: bold;">Wonky Elevator</div>
           </div>
         </div>
-      </div>;
+      </div>`;
 
     document.getElementById("normalElevator").addEventListener("click", () => handleResponse("normal"), { once: true });
     document.getElementById("wonkyElevator").addEventListener("click", () => handleResponse("wonky"), { once: true });
@@ -373,7 +354,7 @@ But today, something strange is happening...
         currentBlockIndex++;
       }
       if (currentBlockIndex >= BLOCK_ORDER.length) {
-        document.body.innerHTML = <div style="display: flex; justify-content: center; align-items: center; height: 100vh;"><h1>Thank you for participating! All trials complete.</h1></div>;
+        document.body.innerHTML = `<div style="display: flex; justify-content: center; align-items: center; height: 100vh;"><h1>Thank you for participating! All trials complete.</h1></div>`;
       } else {
         rebuildBaseHTML();
         runPracticeTrials(BLOCK_ORDER[currentBlockIndex]);
@@ -387,10 +368,10 @@ But today, something strange is happening...
   }
 
   function rebuildBaseHTML() {
-    document.body.innerHTML = 
+    document.body.innerHTML = `
       <div id="visual-container"></div>
       <audio id="myAudio" hidden preload="auto"></audio>
-      <div id="trialControls"></div>;
+      <div id="trialControls"></div>`;
     responseSubmitted = false;
     setupVisualElements();
   }
@@ -408,12 +389,12 @@ But today, something strange is happening...
     let i = 0;
 
     function showNarrationScreen(trial, nextStep) {
-      trialControls.innerHTML = 
+      trialControls.innerHTML = `
         <div style="padding: 40px; font-size: 1.4em; max-width: 800px; margin: auto;">
           <p>${trial.narrationText}</p>
           <button id="continueButton" style="margin-top: 20px; padding: 12px 24px; font-size: 1em; border-radius: 8px;">Continue</button>
         </div>
-      ;
+      `;
       document.getElementById("continueButton").addEventListener("click", () => {
         trialControls.innerHTML = "";
         nextStep();
@@ -431,7 +412,7 @@ But today, something strange is happening...
       i++;
 
       showNarrationScreen(trial, () => {
-        container.innerHTML = <video id="practiceVideo" class="media-content" playsinline preload="auto" style="display: block; width: 100%; height: 100%;"></video>;
+        container.innerHTML = `<video id="practiceVideo" class="media-content" playsinline preload="auto" style="display: block; width: 100%; height: 100%;"></video>`;
         const video = document.getElementById("practiceVideo");
         video.src = trial.video;
         video.play();
@@ -440,7 +421,7 @@ But today, something strange is happening...
           if (trial.responseRequired) {
             showPracticeChoice(trial.correct, playNextPractice);
           } else {
-            trialControls.innerHTML = <div style="font-size: 1.3em; margin-top: 20px;">That was the <strong>${trial.correct}</strong> elevator!<br><br>Let's try one yourself next.</div>;
+            trialControls.innerHTML = `<div style="font-size: 1.3em; margin-top: 20px;">That was the <strong>${trial.correct}</strong> elevator!<br><br>Let's try one yourself next.</div>`;
             setTimeout(() => {
               trialControls.innerHTML = "";
               playNextPractice();
@@ -454,7 +435,7 @@ But today, something strange is happening...
   }
 
   function showPracticeChoice(correctAnswer, onComplete) {
-    document.getElementById("trialControls").innerHTML = 
+    document.getElementById("trialControls").innerHTML = `
       <h2>Which elevator did Melody ride?</h2>
       <div style="display: flex; justify-content: center; gap: 60px; margin-top: 20px;">
         <div>
@@ -467,7 +448,7 @@ But today, something strange is happening...
         </div>
       </div>
       <div id="practiceFeedback" style="margin-top: 30px; font-size: 1.2em;"></div>
-    ;
+    `;
 
     document.getElementById("normalElevator").addEventListener("click", () => {
       showPracticeFeedback("normal" === correctAnswer, onComplete);
@@ -492,4 +473,3 @@ But today, something strange is happening...
   </script>
 </body>
 </html>
-
